--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,112 +8,154 @@
     android:background="@drawable/background"
     tools:context=".MainActivity">
 
-    <FrameLayout
-        android:id="@+id/bottom_container"
+<!--    <FrameLayout-->
+<!--        android:id="@+id/bottom_container"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="70dp"-->
+<!--        android:background="@color/material_dynamic_primary20"-->
+<!--        app:layout_constraintBottom_toBottomOf="parent"-->
+<!--        tools:layout_editor_absoluteX="1dp">-->
+
+<!--    </FrameLayout>-->
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout"
         android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="@color/material_dynamic_primary20"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="1dp">
-
-    </FrameLayout>
-
-    <FrameLayout
-        android:id="@+id/top_container"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:background="#191970"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="1dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingStart="10dp"
-            android:paddingTop="10dp"
-            android:text="@string/app_name"
-            android:textColor="@color/white"
-            android:textSize="30sp"
-            android:shadowColor="@color/black"
-            android:shadowDx="5"
-            android:shadowDy="5"/>
-
-
-    </FrameLayout>
-
-    <LinearLayout
-        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:background="@drawable/corner_background"
-        app:layout_constraintBottom_toTopOf="@id/bottom_container"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/top_bar">
+        app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/btn_menu"
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topAppBar"
+            app:title="@string/page_title"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:background="?selectableItemBackgroundBorderless"
-            android:textStyle="bold"
-            android:shadowColor="@color/black"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="2"
-            android:text="@string/btn_menu" />
+            android:layout_height="?actionBarSize"
+            app:navigationIcon="@drawable/round_menu"
+            app:menu="@menu/top_app_bar"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary">
 
-        <Button
-            android:id="@+id/btn_favorites"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:background="?selectableItemBackgroundBorderless"
-            android:textStyle="bold"
-            android:shadowColor="@color/black"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="2"
-            android:text="@string/btn_favorites" />
+        </com.google.android.material.appbar.MaterialToolbar>
 
-        <Button
-            android:id="@+id/btn_watch_later"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:background="?selectableItemBackgroundBorderless"
-            android:textStyle="bold"
-            android:shadowColor="@color/black"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="2"
-            android:text="@string/btn_watch_later" />
-        <Button
-            android:id="@+id/btn_selections"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:background="?selectableItemBackgroundBorderless"
-            android:textStyle="bold"
-            android:shadowColor="@color/black"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="2"
-            android:text="@string/btn_selections" />
-        <Button
-            android:id="@+id/btn_settings"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:background="?selectableItemBackgroundBorderless"
-            android:textStyle="bold"
-            android:shadowColor="@color/black"
-            android:shadowDx="1"
-            android:shadowDy="1"
-            android:shadowRadius="2"
-            android:text="@string/btn_settings" />
-    </LinearLayout>
+
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/app_bar_layout2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navyAppBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+
+        app:itemTextColor="@color/white"
+        app:itemIconTint="@color/white"
+        app:labelVisibilityMode="labeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/navi_app_bar"
+        style="@style/Widget.MaterialComponents.Toolbar.Primary">
+
+    </com.google.android.material.bottomnavigation.BottomNavigationView>
+    </com.google.android.material.appbar.AppBarLayout>
+
+<!--    <FrameLayout-->
+<!--        android:id="@+id/top_container"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="70dp"-->
+<!--        app:layout_constraintTop_toTopOf="parent"-->
+<!--        tools:layout_editor_absoluteX="1dp"-->
+<!--        style="@style/Widget.MaterialComponents.Toolbar.Primary">-->
+
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:paddingStart="10dp"-->
+<!--            android:paddingTop="10dp"-->
+<!--            android:text="@string/app_name"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="30sp"-->
+<!--            android:shadowColor="@color/black"-->
+<!--            android:shadowDx="5"-->
+<!--            android:shadowDy="5"/>-->
+
+
+<!--    </FrameLayout>-->
+
+<!--    <LinearLayout-->
+<!--        android:layout_width="300dp"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="vertical"-->
+<!--        android:background="@drawable/corner_background"-->
+<!--        app:layout_constraintBottom_toTopOf="@id/bottom_container"-->
+<!--        app:layout_constraintLeft_toLeftOf="parent"-->
+<!--        app:layout_constraintRight_toRightOf="parent"-->
+<!--        app:layout_constraintTop_toBottomOf="@id/top_bar">-->
+
+<!--        <Button-->
+<!--            android:id="@+id/btn_menu"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:background="?selectableItemBackgroundBorderless"-->
+<!--            android:textStyle="bold"-->
+<!--            android:shadowColor="@color/black"-->
+<!--            android:shadowDx="1"-->
+<!--            android:shadowDy="1"-->
+<!--            android:shadowRadius="2"-->
+<!--            android:text="@string/btn_menu" />-->
+
+<!--        <Button-->
+<!--            android:id="@+id/btn_favorites"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:background="?selectableItemBackgroundBorderless"-->
+<!--            android:textStyle="bold"-->
+<!--            android:shadowColor="@color/black"-->
+<!--            android:shadowDx="1"-->
+<!--            android:shadowDy="1"-->
+<!--            android:shadowRadius="2"-->
+<!--            android:text="@string/btn_favorites" />-->
+
+<!--        <Button-->
+<!--            android:id="@+id/btn_watch_later"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:background="?selectableItemBackgroundBorderless"-->
+<!--            android:textStyle="bold"-->
+<!--            android:shadowColor="@color/black"-->
+<!--            android:shadowDx="1"-->
+<!--            android:shadowDy="1"-->
+<!--            android:shadowRadius="2"-->
+<!--            android:text="@string/btn_watch_later" />-->
+<!--        <Button-->
+<!--            android:id="@+id/btn_selections"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:background="?selectableItemBackgroundBorderless"-->
+<!--            android:textStyle="bold"-->
+<!--            android:shadowColor="@color/black"-->
+<!--            android:shadowDx="1"-->
+<!--            android:shadowDy="1"-->
+<!--            android:shadowRadius="2"-->
+<!--            android:text="@string/btn_selections" />-->
+<!--        <Button-->
+<!--            android:id="@+id/btn_settings"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:background="?selectableItemBackgroundBorderless"-->
+<!--            android:textStyle="bold"-->
+<!--            android:shadowColor="@color/black"-->
+<!--            android:shadowDx="1"-->
+<!--            android:shadowDy="1"-->
+<!--            android:shadowRadius="2"-->
+<!--            android:text="@string/btn_settings" />-->
+<!--    </LinearLayout>-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/top_bar"
@@ -122,7 +164,7 @@
         android:layout_margin="10dp"
         app:cardCornerRadius="15dp"
         android:elevation="5dp"
-        app:layout_constraintTop_toBottomOf="@id/top_container">
+        app:layout_constraintTop_toBottomOf="@id/app_bar_layout">
 
 
     <LinearLayout
@@ -172,6 +214,7 @@
         android:text="@string/disclaimer"
         android:autoLink="web"
         android:clickable="true"
+        android:focusable="true"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_bar" />
