--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,15 +8,7 @@
     android:background="@drawable/background"
     tools:context=".MainActivity">
 
-<!--    <FrameLayout-->
-<!--        android:id="@+id/bottom_container"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="70dp"-->
-<!--        android:background="@color/material_dynamic_primary20"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        tools:layout_editor_absoluteX="1dp">-->
 
-<!--    </FrameLayout>-->
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/app_bar_layout"
@@ -58,104 +50,10 @@
         style="@style/Widget.MaterialComponents.Toolbar.Primary">
 
     </com.google.android.material.bottomnavigation.BottomNavigationView>
+
     </com.google.android.material.appbar.AppBarLayout>
 
-<!--    <FrameLayout-->
-<!--        android:id="@+id/top_container"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="70dp"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        tools:layout_editor_absoluteX="1dp"-->
-<!--        style="@style/Widget.MaterialComponents.Toolbar.Primary">-->
 
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:paddingStart="10dp"-->
-<!--            android:paddingTop="10dp"-->
-<!--            android:text="@string/app_name"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="30sp"-->
-<!--            android:shadowColor="@color/black"-->
-<!--            android:shadowDx="5"-->
-<!--            android:shadowDy="5"/>-->
-
-
-<!--    </FrameLayout>-->
-
-<!--    <LinearLayout-->
-<!--        android:layout_width="300dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="vertical"-->
-<!--        android:background="@drawable/corner_background"-->
-<!--        app:layout_constraintBottom_toTopOf="@id/bottom_container"-->
-<!--        app:layout_constraintLeft_toLeftOf="parent"-->
-<!--        app:layout_constraintRight_toRightOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/top_bar">-->
-
-<!--        <Button-->
-<!--            android:id="@+id/btn_menu"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:background="?selectableItemBackgroundBorderless"-->
-<!--            android:textStyle="bold"-->
-<!--            android:shadowColor="@color/black"-->
-<!--            android:shadowDx="1"-->
-<!--            android:shadowDy="1"-->
-<!--            android:shadowRadius="2"-->
-<!--            android:text="@string/btn_menu" />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/btn_favorites"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:background="?selectableItemBackgroundBorderless"-->
-<!--            android:textStyle="bold"-->
-<!--            android:shadowColor="@color/black"-->
-<!--            android:shadowDx="1"-->
-<!--            android:shadowDy="1"-->
-<!--            android:shadowRadius="2"-->
-<!--            android:text="@string/btn_favorites" />-->
-
-<!--        <Button-->
-<!--            android:id="@+id/btn_watch_later"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:background="?selectableItemBackgroundBorderless"-->
-<!--            android:textStyle="bold"-->
-<!--            android:shadowColor="@color/black"-->
-<!--            android:shadowDx="1"-->
-<!--            android:shadowDy="1"-->
-<!--            android:shadowRadius="2"-->
-<!--            android:text="@string/btn_watch_later" />-->
-<!--        <Button-->
-<!--            android:id="@+id/btn_selections"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:background="?selectableItemBackgroundBorderless"-->
-<!--            android:textStyle="bold"-->
-<!--            android:shadowColor="@color/black"-->
-<!--            android:shadowDx="1"-->
-<!--            android:shadowDy="1"-->
-<!--            android:shadowRadius="2"-->
-<!--            android:text="@string/btn_selections" />-->
-<!--        <Button-->
-<!--            android:id="@+id/btn_settings"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:background="?selectableItemBackgroundBorderless"-->
-<!--            android:textStyle="bold"-->
-<!--            android:shadowColor="@color/black"-->
-<!--            android:shadowDx="1"-->
-<!--            android:shadowDy="1"-->
-<!--            android:shadowRadius="2"-->
-<!--            android:text="@string/btn_settings" />-->
-<!--    </LinearLayout>-->
 
     <androidx.cardview.widget.CardView
         android:id="@+id/top_bar"
@@ -207,6 +105,7 @@
     </androidx.cardview.widget.CardView>
 
     <TextView
+        android:id="@+id/disclaimer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -218,6 +117,99 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/top_bar" />
+
+
+    <GridLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        android:columnCount="2"
+        android:orientation="horizontal"
+        android:useDefaultMargins="true"
+        android:foreground="@android:color/transparent"
+        android:background="@android:color/transparent"
+        android:layoutAnimation="@anim/layout_anim_posters"
+        app:layout_constraintTop_toBottomOf="@id/disclaimer"
+        app:layout_constraintBottom_toTopOf="@id/app_bar_layout2"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        >
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/poster_1"
+            android:layout_width="135dp"
+            android:layout_height="180dp"
+            app:cardCornerRadius="15dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:stateListAnimator="@animator/poster_pressed">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/transparent"
+                android:contentDescription="Poster 1"
+                android:foreground="@android:color/transparent"
+                android:scaleType="centerCrop"
+                android:src="@drawable/med_transformers_rise_of_the_beasts_ver11" />
+
+        </androidx.cardview.widget.CardView>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/poster_2"
+            android:layout_width="135dp"
+            android:layout_height="180dp"
+            app:cardCornerRadius="15dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:stateListAnimator="@animator/poster_pressed">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Poster 2"
+                android:scaleType="centerCrop"
+                android:src="@drawable/med_insidious_the_red_door" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/poster_3"
+            android:layout_width="135dp"
+            android:layout_height="180dp"
+            app:cardCornerRadius="15dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:stateListAnimator="@animator/poster_pressed">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Poster 3"
+                android:scaleType="centerCrop"
+                android:src="@drawable/med_elemental_ver7" />
+
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/poster_4"
+            android:layout_width="135dp"
+            android:layout_height="180dp"
+            app:cardCornerRadius="15dp"
+            android:clickable="true"
+            android:focusable="true"
+            android:stateListAnimator="@animator/poster_pressed">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:contentDescription="Poster 4"
+                android:scaleType="centerCrop"
+                android:src="@drawable/med_mission_impossible__dead_reckoning_part_one_ver2" />
+
+        </androidx.cardview.widget.CardView>
+
+
+    </GridLayout>
 
 
 
