--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,7 +32,7 @@
     </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_bar_layout2"
+        android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent">
@@ -76,7 +76,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/barbie_ver2" />
+            app:srcCompat="@drawable/barbie" />
 
         <ImageView
             android:id="@+id/imageView2"
@@ -84,14 +84,14 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/med_indiana_jones_and_the_dial_of_destiny_ver2" />
+            app:srcCompat="@drawable/indiana_jones_and_the_dial_of_destiny" />
 
         <ImageView
             android:id="@+id/imageView3"
             android:layout_width="115dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            app:srcCompat="@drawable/med_no_hard_feelings" />
+            app:srcCompat="@drawable/no_hard_feelings" />
 
         <ImageView
             android:id="@+id/imageView4"
@@ -99,10 +99,20 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:scaleType="centerCrop"
-            app:srcCompat="@drawable/oppenheimer_ver3" />
+            app:srcCompat="@drawable/oppenheimer" />
     </LinearLayout>
 
     </androidx.cardview.widget.CardView>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/main_recycler"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/disclaimer"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"/>
 
     <TextView
         android:id="@+id/disclaimer"
@@ -119,97 +129,9 @@
         app:layout_constraintTop_toBottomOf="@+id/top_bar" />
 
 
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:columnCount="2"
-        android:orientation="horizontal"
-        android:useDefaultMargins="true"
-        android:foreground="@android:color/transparent"
-        android:background="@android:color/transparent"
-        android:layoutAnimation="@anim/layout_anim_posters"
-        app:layout_constraintTop_toBottomOf="@id/disclaimer"
-        app:layout_constraintBottom_toTopOf="@id/app_bar_layout2"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        >
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster_1"
-            android:layout_width="135dp"
-            android:layout_height="180dp"
-            app:cardCornerRadius="15dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:stateListAnimator="@animator/poster_pressed">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="@android:color/transparent"
-                android:contentDescription="Poster 1"
-                android:foreground="@android:color/transparent"
-                android:scaleType="centerCrop"
-                android:src="@drawable/med_transformers_rise_of_the_beasts_ver11" />
-
-        </androidx.cardview.widget.CardView>
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster_2"
-            android:layout_width="135dp"
-            android:layout_height="180dp"
-            app:cardCornerRadius="15dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:stateListAnimator="@animator/poster_pressed">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="Poster 2"
-                android:scaleType="centerCrop"
-                android:src="@drawable/med_insidious_the_red_door" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster_3"
-            android:layout_width="135dp"
-            android:layout_height="180dp"
-            app:cardCornerRadius="15dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:stateListAnimator="@animator/poster_pressed">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="Poster 3"
-                android:scaleType="centerCrop"
-                android:src="@drawable/med_elemental_ver7" />
-
-        </androidx.cardview.widget.CardView>
-
-        <androidx.cardview.widget.CardView
-            android:id="@+id/poster_4"
-            android:layout_width="135dp"
-            android:layout_height="180dp"
-            app:cardCornerRadius="15dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:stateListAnimator="@animator/poster_pressed">
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:contentDescription="Poster 4"
-                android:scaleType="centerCrop"
-                android:src="@drawable/med_mission_impossible__dead_reckoning_part_one_ver2" />
-
-        </androidx.cardview.widget.CardView>
 
 
-    </GridLayout>
+
 
 
 
