--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,12 +17,13 @@
 
         <com.google.android.material.appbar.MaterialToolbar
             android:id="@+id/topAppBar"
-            app:title="@string/page_title"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            app:navigationIcon="@drawable/round_menu"
+            android:background="@color/dark_gray"
             app:menu="@menu/top_app_bar"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary">
+            app:navigationIcon="@drawable/round_menu"
+            app:title="@string/page_title">
 
         </com.google.android.material.appbar.MaterialToolbar>
 
@@ -34,6 +35,7 @@
         android:id="@+id/fragment_placeholder"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+
         app:layout_constraintTop_toBottomOf="@id/app_bar_layout"
         app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>
 
@@ -46,15 +48,16 @@
 
         <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/navyAppBar"
+            style="@style/Widget.MaterialComponents.Toolbar.Primary"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
-            app:itemTextColor="@color/white"
+            android:background="@color/dark_gray"
+            android:backgroundTint="@color/black"
             app:itemIconTint="@color/white"
+            app:itemTextColor="@color/white"
             app:labelVisibilityMode="labeled"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/navi_app_bar"
-            style="@style/Widget.MaterialComponents.Toolbar.Primary">
+            app:menu="@menu/navi_app_bar">
 
         </com.google.android.material.bottomnavigation.BottomNavigationView>
 
