--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,10 +4,9 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:id="@+id/coordinator"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="false"
         android:background="@drawable/background_home"
         tools:context="com.bregandert.filmsearch.view.fragments.DetailsFragment">
 
@@ -48,10 +47,34 @@
         </com.google.android.material.appbar.AppBarLayout>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/details_fab_download_wp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="16dp"
+        app:borderWidth="0dp"
+
+        android:backgroundTint="@color/cardview_dark_background"
+        app:layout_anchor="@id/app_bar"
+        app:layout_anchorGravity="bottom|left"
+        app:srcCompat = "@drawable/ic_baseline_cloud"
+        app:tint = "@color/white"/>
+    
+    <ProgressBar
+        android:id="@+id/progress_bar"
+        android:visibility="invisible"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:translationZ="10dp"
+        app:layout_anchor="@id/details_fab_download_wp"
+        app:layout_anchorGravity="center"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/details_fab"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            app:borderWidth="0dp"
+
             android:backgroundTint="@color/cardview_dark_background"
             app:layout_anchor="@id/app_bar"
             app:layout_anchorGravity="bottom|right"
@@ -63,6 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="80dp"
+        app:borderWidth="0dp"
         android:backgroundTint="@color/cardview_dark_background"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|right"
@@ -78,7 +102,8 @@
             android:id="@+id/details_description"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="8dp"
+            android:layout_marginTop="30dp"
+            android:layout_marginStart="8dp"
             tools:text="@tools:sample/lorem/random" />
     </androidx.core.widget.NestedScrollView>
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
